--- a/HocNhatNguMina/app/src/main/res/layout/item_play_media.xml
+++ b/HocNhatNguMina/app/src/main/res/layout/item_play_media.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical|right">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,8 +12,9 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
         android:gravity="center_vertical">
 
         <ImageButton
@@ -32,6 +33,15 @@
             android:padding="16dp"
             android:background="@android:color/transparent"
             android:src="@drawable/bt_pause"
+            />
+
+        <ImageButton
+            android:id="@+id/bt_replay"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:padding="16dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/bt_replay"
             />
 
         <ImageButton
