--- a/HocNhatNguMina/app/src/main/res/layout/fragment_luyen_nghe.xml
+++ b/HocNhatNguMina/app/src/main/res/layout/fragment_luyen_nghe.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.q.a.hocnhatngumina.LuyenNgheFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:dividerHeight="0dp"
+        android:divider="@android:color/transparent"
+        android:layout_alignParentTop="true"></ListView>
 
 </FrameLayout>
