--- a/HocNhatNguMina/app/src/main/res/values/values.xml
+++ b/HocNhatNguMina/app/src/main/res/values/values.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary_material_dark">#08c1f9</color>
-    <color name="primary_dark_material_dark">#26bcf3</color>
+    <color name="primary_dark_material_dark">#269eca</color>
     <color name="accent_material_light">#48d1c4</color>
 </resources>
