--- a/HocNhatNguMina/app/src/main/res/drawable/ic_pause_black_36dp.xml
+++ b/HocNhatNguMina/app/src/main/res/drawable/ic_pause_black_36dp.xml
@@ -1,4 +1,9 @@
-<vector android:height="36dp" android:viewportHeight="510.0"
-    android:viewportWidth="510.0" android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M255,0C114.8,0 0,114.8 0,255s114.8,255 255,255s255,-114.8 255,-255S395.3,0 255,0zM229.5,357h-51V153h51V357zM331.5,357h-51V153h51V357z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M9,16h2L11,8L9,8v8zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8zM13,16h2L15,8h-2v8z"/>
 </vector>
