--- a/HocNhatNguMina/app/src/main/res/drawable/ic_power_off_blue_36dp_1.xml
+++ b/HocNhatNguMina/app/src/main/res/drawable/ic_power_off_blue_36dp_1.xml
@@ -1,4 +1,6 @@
-<vector android:height="36dp" android:viewportHeight="49.652"
-    android:viewportWidth="49.652" android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#006DF0" android:pathData="M49.65,24.83C49.65,11.14 38.51,0 24.83,0C11.14,0 0,11.14 0,24.83c0,13.69 11.14,24.83 24.83,24.83C38.52,49.65 49.65,38.52 49.65,24.83zM27.26,24.79c0,1.3 -1.05,2.36 -2.36,2.36c-1.3,0 -2.36,-1.05 -2.36,-2.36V12.53c0,-1.3 1.05,-2.36 2.36,-2.36c1.3,0 2.36,1.05 2.36,2.36V24.79zM40.86,24.87c0,8.84 -7.19,16.03 -16.03,16.03c-8.84,0 -16.03,-7.19 -16.03,-16.03c0,-4.28 1.67,-8.31 4.7,-11.34c0.46,-0.46 1.06,-0.69 1.66,-0.69s1.21,0.23 1.67,0.69c0.92,0.92 0.92,2.41 -0,3.33c-2.14,2.14 -3.32,4.98 -3.32,8.01c0,6.24 5.08,11.31 11.32,11.31s11.32,-5.07 11.32,-11.31c0,-3.02 -1.18,-5.86 -3.31,-8c-0.92,-0.92 -0.92,-2.41 0,-3.33c0.92,-0.92 2.41,-0.92 3.33,0C39.19,16.56 40.86,20.59 40.86,24.87z"/>
+<vector android:height="36dp" android:viewportHeight="24.0"
+    android:viewportWidth="24.0" android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="@color/color_buton"
+        android:pathData="M14.59,8L12,10.59 9.41,8 8,9.41 10.59,12 8,14.59 9.41,16 12,13.41 14.59,16 16,14.59 13.41,12 16,9.41 14.59,8zM12,2C6.47,2 2,6.47 2,12s4.47,10 10,10 10,-4.47 10,-10S17.53,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z"/>
 </vector>
