--- a/HocNhatNguMina/app/src/main/res/drawable/ic_speaker_black_36dp.xml
+++ b/HocNhatNguMina/app/src/main/res/drawable/ic_speaker_black_36dp.xml
@@ -1,4 +1,9 @@
-<vector android:height="36dp" android:viewportHeight="60.0"
-    android:viewportWidth="60.0" android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M30,0C13.46,0 0,13.46 0,30s13.46,30 30,30s30,-13.46 30,-30S46.54,0 30,0zM38,48.89c0,0.86 -0.34,1.65 -0.95,2.24C36.47,51.68 35.69,52 34.89,52c-0.55,0 -1.09,-0.15 -1.57,-0.43c-0.06,-0.04 -0.12,-0.08 -0.17,-0.13L19.91,39.11C19.76,39.04 19.59,39 19.43,39h-8.32C9.39,39 8,37.61 8,35.9V23.1C8,21.39 9.39,20 11.1,20h8.32c0.17,0 0.33,-0.04 0.48,-0.11L33.15,7.56c0.05,-0.05 0.11,-0.09 0.17,-0.13C33.8,7.15 34.35,7 34.89,7C36.61,7 38,8.39 38,10.11V48.89zM41.71,38.71C41.51,38.9 41.26,39 41,39s-0.51,-0.1 -0.71,-0.29c-0.39,-0.39 -0.39,-1.02 0,-1.41c4.3,-4.3 4.3,-11.29 0,-15.59c-0.39,-0.39 -0.39,-1.02 0,-1.41s1.02,-0.39 1.41,0C46.78,25.37 46.78,33.63 41.71,38.71z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="36dp"
+    android:height="36dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M3,9v6h4l5,5L12,4L7,9L3,9zM16.5,12c0,-1.77 -1.02,-3.29 -2.5,-4.03v8.05c1.48,-0.73 2.5,-2.25 2.5,-4.02zM14,3.23v2.06c2.89,0.86 5,3.54 5,6.71s-2.11,5.85 -5,6.71v2.06c4.01,-0.91 7,-4.49 7,-8.77s-2.99,-7.86 -7,-8.77z"/>
 </vector>
