--- a/HocNhatNguMina/app/src/main/res/values/colors.xml
+++ b/HocNhatNguMina/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#bf440b</color>
     <color name="colorPrimaryDark">#8c2004</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="color_buton">#64000000</color>
 </resources>
